Added a hire me button

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,7 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -9,14 +9,14 @@ body {
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace !important;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace !important;
   font-size: 1rem !important;
 }
 
 .main-container {
   position: relative;
   background-color: #0d1116;
-
 }
 
 a {
@@ -25,12 +25,23 @@ a {
 
 a:hover {
   color: #5000ca;
-  transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
+    border-color 0.15s ease-in-out;
 }
 
-p, a, h1, h2, h3, h4, h5, label, button, span, .greeting {
+p,
+a,
+h1,
+h2,
+h3,
+h4,
+h5,
+label,
+button,
+span,
+.greeting {
   color: white;
-  font-family: "Lato", sans-serif;
+  font-family: 'Lato', sans-serif;
 }
 
 .navigation-bar {
@@ -39,7 +50,7 @@ p, a, h1, h2, h3, h4, h5, label, button, span, .greeting {
 
   button {
     font-size: 1.1rem;
-    font-family: "Lato", sans-serif;
+    font-family: 'Lato', sans-serif;
     text-transform: initial;
     padding: 6px 10px;
   }
@@ -50,9 +61,10 @@ p, a, h1, h2, h3, h4, h5, label, button, span, .greeting {
 }
 
 .navigation-bar-responsive {
-  span, p {
+  span,
+  p {
     color: #0d1116;
-    font-family: "Lato", sans-serif;
+    font-family: 'Lato', sans-serif;
   }
 }
 
@@ -71,14 +83,30 @@ p, a, h1, h2, h3, h4, h5, label, button, span, .greeting {
 }
 
 @keyframes wave {
-  0% { transform: rotate(0deg); }
-  10% { transform: rotate(14deg); }
-  20% { transform: rotate(-8deg); }
-  30% { transform: rotate(14deg); }
-  40% { transform: rotate(-4deg); }
-  50% { transform: rotate(10deg); }
-  60% { transform: rotate(0deg); }
-  100% { transform: rotate(0deg); }
+  0% {
+    transform: rotate(0deg);
+  }
+  10% {
+    transform: rotate(14deg);
+  }
+  20% {
+    transform: rotate(-8deg);
+  }
+  30% {
+    transform: rotate(14deg);
+  }
+  40% {
+    transform: rotate(-4deg);
+  }
+  50% {
+    transform: rotate(10deg);
+  }
+  60% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(0deg);
+  }
 }
 
 .greeting {
@@ -86,6 +114,53 @@ p, a, h1, h2, h3, h4, h5, label, button, span, .greeting {
   align-items: center;
   font-size: 24px;
 }
+
+.hire-me-btn {
+  position: relative;
+  overflow: hidden;
+  background-color: #f8f9fa; 
+  background-image: linear-gradient(to bottom, #f8f9fa, #e9ecef); 
+  color: #0d1116;
+  border: none;
+  border-radius: 8px;
+  width: 100px;
+  height: 40px;
+  margin-top: 10px;
+  font-size: 16px;
+  font-weight: bold;
+  box-shadow: 0 4px #999;
+  transition: all 0.3s ease;
+  cursor: pointer;
+}
+
+.hire-me-btn::before {
+  content: '';
+  position: absolute;
+  top: -100%;
+  left: -100%;
+  width: 200%;
+  height: 120%;
+  background: linear-gradient(45deg, rgba(0, 0, 0, 0.2) 0%, rgba(0, 0, 0, 0) 100%);
+  transform: rotate(-45deg);
+  animation: gradient-line 5s linear infinite;
+}
+
+.hire-me-btn:hover {
+  background-color: #e9ecef;
+  background-image: linear-gradient(to bottom, #e9ecef, #dee2e6);
+  box-shadow: 0 6px #666;
+  transform: scale(0.95);
+}
+
+@keyframes gradient-line {
+  from {
+    transform: translateX(-100%) translateY(-100%) rotate(-45deg);
+  }
+  to {
+    transform: translateX(100%) translateY(100%) rotate(-45deg);
+  }
+}
+
 
 .header-image {
   width: 100%;
@@ -115,19 +190,76 @@ p, a, h1, h2, h3, h4, h5, label, button, span, .greeting {
 }
 
 .light-mode {
+  .hire-me-btn {
+    position: relative;
+    overflow: hidden;
+    background-color: #000;
+    background-image: linear-gradient(to bottom, #333, #0d1116);
+    color: #fff;
+    border: none;
+    border-radius: 8px;
+    width: 100px;
+    height: 40px;
+    margin-top: 10px;
+    font-size: 16px;
+    font-weight: bold;
+    box-shadow: 0 4px rgba(255, 255, 255, 0.3);
+    transition: all 0.3s ease;
+    cursor: pointer;
+  }
+  
+  .hire-me-btn::before {
+    content: '';
+    position: absolute;
+    top: -100%;
+    left: -100%;
+    width: 200%;
+    height: 120%;
+    background: linear-gradient(45deg, rgba(255, 255, 255, 0.1) 0%, rgba(255, 255, 255, 0) 100%);
+    transform: rotate(-45deg);
+    animation: gradient-line 5s linear infinite;
+  }
+  
+  .hire-me-btn:hover {
+    background-color: #333;
+    box-shadow: 0 6px rgba(179, 174, 174, 0.5);
+    transform: scale(0.95);
+  }
+  
+  @keyframes gradient-line {
+    from {
+      transform: translateX(-100%) translateY(-100%) rotate(-45deg);
+    }
+    to {
+      transform: translateX(100%) translateY(100%) rotate(-45deg);
+    }
+  }
+  
+
   background-color: #f8f9fa;
 
   .navigation-bar {
     background-color: #f8f9fa;
   }
 
-  p, a, h1, h2, h3, h4, h5, label, button, span, .greeting {
+  p,
+  a,
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  label,
+  button,
+  span,
+  .greeting {
     color: #0d1116;
   }
 
   a:hover {
     color: #5000ca;
-    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out;
+    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
+      border-color 0.15s ease-in-out;
   }
 
   .navigation-bar svg {
@@ -135,7 +267,7 @@ p, a, h1, h2, h3, h4, h5, label, button, span, .greeting {
   }
 
   .about-section {
-    background-image: url("./assets/images/bg-light.png");
+    background-image: url('./assets/images/bg-light.png');
   }
 
   .skills-container svg {
@@ -144,7 +276,8 @@ p, a, h1, h2, h3, h4, h5, label, button, span, .greeting {
 
   .chip {
     background-color: rgba(0, 0, 0, 0.08);
-    box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2), 0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
+    box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2),
+      0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
   }
 
   .vertical-timeline::before {
@@ -152,10 +285,13 @@ p, a, h1, h2, h3, h4, h5, label, button, span, .greeting {
   }
 
   .vertical-timeline--animate .vertical-timeline-element-content.bounce-in {
-    box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2), 0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
+    box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2),
+      0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
   }
 
-  .vertical-timeline--two-columns .vertical-timeline-element-content .vertical-timeline-element-date {
+  .vertical-timeline--two-columns
+    .vertical-timeline-element-content
+    .vertical-timeline-element-date {
     color: gray;
   }
 
