--- a/src/assets/styles/Modal.scss
+++ b/src/assets/styles/Modal.scss
@@ -17,7 +17,7 @@
       background: #333;
       color: #fff;
     }
-    
+
     .chip {
       color: #fff;
     }
@@ -74,7 +74,7 @@
     flex-direction: column;
     padding-top: 30px;
   }
-  
+
   .modal-image img {
     width: 100%;
   }
@@ -161,4 +161,13 @@
 .modal-button:hover {
   background-color: #4d78a7;
   transform: scale(0.95);
+}
+
+.message {
+  font-size: 0.875rem;
+  font-weight: 600;
+  box-shadow: 0px 1px 4px 0px #4299e1;
+  padding: 0.7rem;
+  margin: 1rem 0;
+  border-radius: 0.5rem;
 }
